# internal/handler/bookmark/handler.go
@@ -1,0 +1,19 @@
+package bookmark
+
+import (
+	"github.com/HadesHo3820/ebvn-golang-course/internal/service/bookmark"
+	"github.com/gin-gonic/gin"
+)
+
+type Handler interface {
+	CreateBookmark(c *gin.Context)
+	GetBookmarks(c *gin.Context)
+}
+
+type bookmarkHandler struct {
+	svc bookmark.Service
+}
+
+func NewHandler(svc bookmark.Service) Handler {
+	return &bookmarkHandler{svc: svc}
+}
